logo changed and extra features

--- a/views/Layout.ejs
+++ b/views/Layout.ejs
@@ -4,9 +4,9 @@
 
 <!-- Mirrored from wp.alithemes.com/html/evara/evara-//frontEnd/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:20:36 GMT -->
 
-<head>
+<head> 
   <meta charset="utf-8">
-  <title>Evara - eCommerce HTML Template</title>
+  <title>𝖂𝖊𝖑𝖈𝖔𝖒𝖊 𝖙𝖔</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="/frontEnd/imgs/theme/favicon.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="/frontEnd/imgs/theme/newlogo.png">
   <!-- Template CSS -->
   <link rel="stylesheet" href="/frontEnd/css/main.css">
 
@@ -65,7 +65,13 @@
 <!-- Template  JS -->
 <script src="/frontEnd/js/main.js"></script>
 <script src="/frontEnd/js/shop.js"></script>
+<script>
+  function flashTitle() {
+    document.title = (document.title === "𝖂𝖊𝖑𝖈𝖔𝖒𝖊 𝖙𝖔") ? "𝕯𝖗𝖊𝖘𝖘𝖀𝖕𝕷𝖆𝖓𝖉" : "𝖂𝖊𝖑𝖈𝖔𝖒𝖊 𝖙𝖔";
+  }
 
+  setInterval(flashTitle, 1000); // Change the title every 1 second (1000 milliseconds)
+</script>
 
 </body>
 
