--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -6,7 +6,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="logo logo-width-1">
-          <a href="/"><img src="/frontEnd/imgs/theme/logo.svg" alt="logo"></a>
+          <a href="/"><img src="/frontEnd/imgs/theme/newlogo.png" alt="logo"></a>
         </div>
         <div class="header-right">
           <div class="search-style-2">
