--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -110,7 +110,7 @@
                             <td><%=item.paymentMethod%></td>
                             <td><%=item.paymentStatus%></td>
                             <td><%=item.orderConfirm%></td>
-                            <td>$<%=item.totalPrice%></td>
+                            <td>₹<%=item.totalPrice%></td>
                             <td>
                               <center>
                                 <button type="button" id="details">
