--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -186,8 +186,8 @@
   .empty-cart {
     text-align: center;
     width: 25%;
-    margin-top: 5%; /* Adjust the top margin as needed */
-    margin-bottom: 5%; /* Adjust the bottom margin as needed */
+    margin-top: 5%; 
+    margin-bottom: 5%; 
     
   }
 
