--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -4,6 +4,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+  
+
 </head>
 
 <main class="main">
@@ -68,9 +70,14 @@
 
                     </address>
                     <div class="d-flex mt-2">
-                      <button type="button" class="btn btn-primary btn-small" onclick="editAddress('<%=item._id%>')" data-toggle="modal" data-target="#editModal" data-whatever="@mdo" <a href="" rel="modal:open" class="btn hover-up btn-small mx-1"><i class="fi-rs-edit"></i></a> ></button>
-
-                      <a style="border-color: red ;" onclick="removeAddress('<%=item._id%>')" class="mx-1 btn btn-danger hover-up bg-danger btn-small"><i class="fi-rs-trash"></i></a>
+                      <button type="button" class="btn btn-primary btn-small hover-up mx-1" onclick="editAddress('<%=item._id%>')">
+                        <i class="fi-rs-edit"></i>
+                      </button>
+                      
+                      <button type="button" class="btn btn-danger btn-small hover-up bg-danger mx-1" style="border-color: red;" onclick="removeAddress('<%=item._id%>')">
+                        <i class="fi-rs-trash"></i>
+                      </button>
+                      
                     </div>
 
                   </div>
@@ -300,7 +307,6 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        </button>
       </div>
       <div class="modal-body">
         <div class="col-md-6">
@@ -310,43 +316,43 @@
           <form style="width: 450px;">
 
             <div class="form-group">
-              <input type="text" required="" name="fname" id="fname" placeholder="First name *">
+              <input type="text"  name="fname" id="Fname" placeholder="First name *">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input type="text" required="" name="lname" id="lname" placeholder="Last name *">
+              <input type="text"  name="lname" id="Lname" placeholder="Last name *">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input type="text" name="street" id="street" required="" placeholder="Street*">
+              <input type="text" name="street" id="Street"  placeholder="Street*">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input type="text" name="appartment" id="appartment" required="" placeholder="Appartment">
+              <input type="text" name="appartment" id="Appartment"  placeholder="Appartment">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input required="" type="text" name="city" id="city" placeholder="City / Town *">
+              <input type="text" name="city" id="City" placeholder="City / Town *">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input required="" type="text" name="state" id="state" placeholder="State / County *">
+              <input  type="text" name="state" id="State" placeholder="State / County *">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input required="" type="text" name="zipcode" id="zipcode" placeholder="Postcode / ZIP *">
+              <input required="" type="text" name="zipcode" id="Zipcode" placeholder="Postcode / ZIP *">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input required="" type="text" name="phone" id="phone" placeholder="Phone *">
+              <input  type="text" name="phone" id="Phone" placeholder="Phone *">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="form-group">
-              <input required="" type="text" name="email" id="email" placeholder="Email address *">
+              <input  type="text" name="email" id="Email" placeholder="Email address *">
               <p id="err" class="text-danger"></p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button id="cancelBtn" type="button" class="btn btn-secondary">Cancel</button>
               <button type="button" class="btn btn-primary">Save</button>
             </div>
 
@@ -487,9 +493,56 @@
     })
   }
 
+  //edit modal cancel button
+  $('#cancelBtn').click(function() {
+  $('#editModal').modal('hide');
+});
+
+  //edit address
+  function editAddress(addressId, userId) {
+  $.ajax({
+    url: '/edit-address/' + addressId,
+    method: 'GET',
+    success: function(response) {
+      if (response) {
+        // Open the modal
+        $('#editModal').modal('show');
+      }
+
+      // Update the modal with the address data after the modal is shown
+      $('#editModal').on('shown.bs.modal', function () {
+
+        $('#Fname').val(response.fname);
+        $('#Lname').val(response.lname);
+        $('#Street').val(response.street);
+        $('#Appartment').val(response.appartment);
+        $('#City').val(response.city);
+        $('#State').val(response.state);
+        $('#Zipcode').val(response.zipcode);
+        $('#Phone').val(response.phone);
+        $('#Email').val(response.email);
+      });
+    },
+    error: function() {
+      console.log('Error occurred while retrieving the address data.');
+    }
+  });
+}
+
+
+
+
+  // Add the code snippet here
+  $('#editModal').on('shown.bs.modal', function () {
+    $('#editForm input:first').focus();
+  });
+
+
+
+
   //edit address
 
-  function editAddress(userId) {
+  function eeditAddress(userId) {
     $.ajax({
       url: '/edit-address' + userId,
       method: 'PUT',
