--- a/views/admin/addBanner.ejs
+++ b/views/admin/addBanner.ejs
@@ -1,121 +1,5 @@
-<!-- <div class="container mb-150 ml-180 mt-100">
-    <section class="">
-        <div class="col-md-8 box">
-          <div class="container d-flex justify-content-center">
-            <div class="row w-75 mt-5">
-              <div class="col-md-12">
-                <h2 class="text-center">Add Banner</h2>
-                <form action="/admin/add-banner" method="post" enctype="multipart/form-data" id="myform">
-                  <label for="">Title</label>
-                  <input type="text" name="title" class="form-control" id="title" onkeyup="titleValidation()" />
-                  <span id="title-error" class="validation-label"></span>
-                  <br />
 
-                  <label for="">Description</label>
-                  <input type="text" name="description" class="form-control" id="description" onkeyup="descriptionValidation()" />
-                  <span id="description-error" class="validation-label"></span>
-                  <br />
-
-                  <label for="">Image</label>
-                  <input type="file" name="image" class="form-control" required />
-                  <button type="submit" class="btn btn-info text-white text-center mt-4">
-                    Submit
-                  </button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-</div>
-<br>
-
-
-
-<script>
-  let regex = /^[^ ].*/;
-
-  let description = document.getElementById("description");
-  let link = document.getElementById("link");
-
-  let titleError = document.getElementById("title-error");
-  let descriptionError = document.getElementById("description-error");
-  let linkError = document.getElementById("link-error");
-
-  let myform = document.getElementById("myform");
-
-  function titleValidation() {
-    let name = document.getElementById("title").value;
-    let nameInput = document.getElementById("title");
-    if (name.length == 0) {
-      titleError.innerHTML = "Title is required";
-      titleError.style.color = "red";
-      nameInput.style.border = "solid 2px red";
-      return false;
-    }
-    if (!name.match(regex)) {
-      titleError.innerHTML = "Write valid Title";
-      titleError.style.color = "red";
-      nameInput.style.border = "solid 2px red";
-      return false;
-    }
-    titleError.innerHTML = "";
-    titleError.style.color = "green";
-    nameInput.style.border = "solid 2px green";
-    return true;
-  }
-
-  function descriptionValidation() {
-    let name = document.getElementById("description").value;
-    let nameInput = document.getElementById("description");
-    if (name.length == 0) {
-      descriptionError.innerHTML = "Description is required";
-      descriptionError.style.color = "red";
-      nameInput.style.border = "solid 2px red";
-      return false;
-    }
-    if (!name.match(regex)) {
-      descriptionError.innerHTML = "Write valid Description";
-      descriptionError.style.color = "red";
-      nameInput.style.border = "solid 2px red";
-      return false;
-    }
-    descriptionError.innerHTML = "";
-    descriptionError.style.color = "green";
-    nameInput.style.border = "solid 2px green";
-    return true;
-  }
-
-  myform.addEventListener("submit", (event) => {
-    event.preventDefault();
-    if (!titleValidation() || !descriptionValidation()) {
-      return false;
-    } else {
-      myform.submit();
-    }
-  });
-</script>
-
-<style>
-  body {
-    font-family: Arial, sans-serif;
-  }
-
-  h1 {
-    text-align: center;
-  }
-
- 
-
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-</style> -->
-
-
-
-<div class="container mb-150 ml-180 mt-100">
+<div class="container mb-150 ml-180 mt-20">
   <section class="">
     <div class="col-md-8 box ">
       <div class="container d-flex justify-content-center">
@@ -128,15 +12,23 @@
               <small id="error1" class="text-danger"></small>
               <br />
 
-              <label for="">Description</label>
-              <input type="text" name="description" class="form-control" id="description" />
+              <label for="">Main Description</label>
+              <input type="text" name="mainDescription" class="form-control" id="mainDescription" />
               <small id="error2" class="text-danger"></small>
+              <br />
+              <label for="">Sub Description</label>
+              <input type="text" name="subDescription" class="form-control" id="subDescription" />
+              <small id="error3" class="text-danger"></small>
+              <br />
+              <label for="">Category Offer</label>
+              <input type="text" name="categoryOffer" class="form-control" id="categoryOffer" />
+              <small id="error4" class="text-danger"></small>
               <br />
 
               <label for="">Image</label>
               <img class="w-25 h-25" src="/imgs/theme/upload.svg" id="imgView" alt="">
               <input type="file" name="image" class="form-control" required onchange="viewImage(event)" accept=".jpg, .jpeg, .png, .avif" />
-              <small id="error3" class="text-danger"></small>
+              <small id="error5" class="text-danger"></small>
               <button type="button" class="btn btn-info text-white text-center mt-4" onclick="validate()">
                 Submit
               </button>
@@ -159,37 +51,55 @@
 
   function validate() {
     const title = document.getElementById('title')
-    const description = document.getElementById('description')
+    const mainDescription = document.getElementById('mainDescription')
+    const subDescription = document.getElementById('subDescription')
+    const categoryOffer = document.getElementById('categoryOffer')
     const image = document.getElementById("imgView");
 
 
     const titleValue = title.value.trim()
-    const descriptionValue = description.value.trim()
+    const mainDescriptionValue = mainDescription.value.trim()
+    const subDescriptionValue = subDescription.value.trim()
+    const categoryOfferValue = categoryOffer.value.trim()
+
 
     let error1 = document.getElementById('error1')
     let error2 = document.getElementById('error2')
     let error3 = document.getElementById("error3")
+    let error4 = document.getElementById("error4")
+    let error5 = document.getElementById("error5")
+    
 
     error1.innerText = ''
     error2.innerText = ''
     error3.innerText = ''
+    error4.innerText = ''
+    error5.innerText = ''
 
 
     let flag = 1
 
     if (titleValue == '') {
-      error1.innerText = "Title field is required"
+      error1.innerText = "Title is required"
       flag = 2
     }
 
-    if (descriptionValue == '') {
-      error2.innerText = "Description field is required"
+    if (mainDescriptionValue == '') {
+      error2.innerText = "Main Description is required"
+      flag = 2
+    }
+    if (subDescriptionValue == '') {
+      error3.innerText = "Sub Description is required"
+      flag = 2
+    }
+    if (categoryOfferValue == '') {
+      error4.innerText = "Category Offer is required"
       flag = 2
     }
 
     const allowedExtensions = /(\.jpg|\.jpeg|\.png|\.avif|\.webp)$/i;
     if (!allowedExtensions.exec(selectedFile.name)) {
-      error3.innerText = "Please select a valid image format.";
+      error5.innerText = "Please select a valid image format.";
       flag = 2;
     }
 
